<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="256dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    android:elevation="4dp"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="16dp"
    android:outlineAmbientShadowColor="@color/shadow_color">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_person_view_name"
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/ShowText"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:background="@color/text_light"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <LinearLayout
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/birthdate_hint"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/InputHint"/>

                <TextView
                    android:id="@+id/tv_person_view_birthdate"
                    android:text="@string/birthdate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/ShowText"
                    />
            </LinearLayout>

            <LinearLayout
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/mail_hint"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/InputHint"/>

                <TextView
                    android:id="@+id/tv_person_view_email"
                    android:text="@string/mail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/ShowText"
                    />
            </LinearLayout>

            <LinearLayout
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/phone_hint"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/InputHint"/>

                <TextView
                    android:id="@+id/tv_person_view_phone"
                    android:text="@string/phone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/ShowText"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_person_view_note"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:padding="8dp"
                    android:text="@string/note_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputHint"/>

                <TextView
                    android:id="@+id/tv_person_view_note"
                    android:text="@string/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputHint"
                    android:background="@drawable/bg_note"
                    android:padding="8dp"
                    />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>